--- a/demo_sdks_third/app_amap_demo/src/main/res/layout/activity_main.xml
+++ b/demo_sdks_third/app_amap_demo/src/main/res/layout/activity_main.xml
@@ -32,6 +32,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="释放定位" />
+
+                <Button
+                    android:id="@+id/btCheckPermission"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="检查权限" />
             </LinearLayout>
 
             <LinearLayout
@@ -63,10 +70,9 @@
                     android:id="@+id/etPoi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:hint="输入要搜索的位置"
                     android:text="科大讯飞" />
-
 
                 <EditText
                     android:id="@+id/etPoiPage"
